--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,42 @@
-name: Trajectory-Parallelization Rsync Deployment
 on:
   push:
     branches:
-    - main
-
+      - main
+  workflow_dispatch:
+  
 jobs:
-  deploy:
+  run_pull:
+    name: run pull
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: rsync deployments
-      uses: burnett01/rsync-deployments@6.0.0
-      with:
-        switches: -avzr --filter=':- .gitignore'
-        path: ./
-        remote_path: ${{ secrets.PUBLIC_PATH }}
-        remote_host: ${{ secrets.HOSTIP }}
-        remote_user: ${{ secrets.USER_NAME }}
-        remote_key: ${{ secrets.PRIVATE_KEY }}
+    - name: cleanup
+      run: rm -rf ~/.ssh
+
+    - name: install ssh keys
+      run: |
+        install -m 600 -D /dev/null ~/.ssh/id_rsa
+        echo "${{ secrets.PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.HOSTIP }} > ~/.ssh/known_hosts
+    
+    - name: connect and pull
+      run: 
+          ssh ${{ secrets.USER_NAME }}@${{ secrets.HOSTIP }} 
+          "
+            cd ../var/www/html/
+            && pwd 
+            && ls 
+            && exit
+          " 
+          
+    - name: directory path
+      run: pwd
+
+    
+
+
+
+
+
+
+
+
